# curvlinops

./: .conda_env.yml  .envrc  .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  changelog.md  makefile  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: lint-black.yaml  lint-darglint.yaml  lint-flake8.yaml  lint-format.yaml  lint-isort.yaml  lint-pydocstyle.yaml  lint-ruff.yaml  python-publish.yml  test.yaml
curvlinops/: __init__.py  _base.py  _checks.py  _empirical_risk.py  _torch_base.py  activation_hessian.py  blockdiagonal.py  diag.py  eigh.py  ekfac.py  fisher.py  ggn.py  ggn_diagonal.py  ggn_utils.py  gradient_moments.py  hessian.py  inverse.py  io_collector.py  io_patterns.py  io_verification.py  jacobian.py  kfac.py  kfac_utils.py  kfoc.py  kronecker.py  outer.py  sampling.py  submatrix.py  utils.py  weighted_ce_loss.py
curvlinops/computers/: __init__.py  _base.py  ekfac.py  ekfac_hooks.py  ekfac_make_fx.py  ggn_diagonal.py  kfac.py  kfac_hooks.py  kfac_make_fx.py  kfac_math.py  kfoc_make_fx.py
curvlinops/computers/io_collector/: __init__.py  _base.py  collector.py  conv.py  groups.py  layer_io.py  linear.py  patterns.py  verification.py
curvlinops/diagonal/: __init__.py  epperly2024xtrace.py  hutchinson.py
curvlinops/examples/: __init__.py  functorch.py  utils.py
curvlinops/experimental/: __init__.py  activation_hessian.py
curvlinops/io_patterns/: __init__.py  _base.py  conv.py  linear.py
curvlinops/norm/: __init__.py  hutchinson.py
curvlinops/papyan2020traces/: __init__.py  spectrum.py
curvlinops/trace/: __init__.py  epperly2024xtrace.py  hutchinson.py  meyer2020hutch.py  sampling.py
docs/examples/basic_usage/: .gitignore  benchmark_execute.py  benchmark_utils.py  example_benchmark.py  example_eigenvalues.py  example_fisher_monte_carlo.py  example_huggingface.py  example_inverses.py  example_matrix_vector_products.py  example_model_merging.py  example_natural_gradient.py  example_submatrices.py  example_trace_diagonal_estimation.py  example_verification_spectral_density.py  example_visual_tour.py  memory_benchmark.py
docs/examples/basic_usage/benchmark/: EKFAC-(hooks)_synthetic_cifar10_resnet18_cuda.json  EKFAC-(hooks)_synthetic_imagenet_resnet50_cuda.json  EKFAC-(hooks)_synthetic_mnist_mlp_cuda.json  EKFAC-(hooks)_synthetic_shakespeare_nanogpt_cuda.json  EKFAC-inverse-(hooks)_synthetic_cifar10_resnet18_cuda.json  EKFAC-inverse-(hooks)_synthetic_imagenet_resnet50_cuda.json  EKFAC-inverse-(hooks)_synthetic_mnist_mlp_cuda.json  EKFAC-inverse-(hooks)_synthetic_shakespeare_nanogpt_cuda.json  Empirical-Fisher_synthetic_cifar10_resnet18_cuda.json  Empirical-Fisher_synthetic_imagenet_resnet50_cuda.json  Empirical-Fisher_synthetic_mnist_mlp_cuda.json  Empirical-Fisher_synthetic_shakespeare_nanogpt_cuda.json  Generalized-Gauss-Newton_synthetic_cifar10_resnet18_cuda.json  Generalized-Gauss-Newton_synthetic_imagenet_resnet50_cuda.json  Generalized-Gauss-Newton_synthetic_mnist_mlp_cuda.json  Generalized-Gauss-Newton_synthetic_shakespeare_nanogpt_cuda.json  Hessian_synthetic_cifar10_resnet18_cuda.json  Hessian_synthetic_imagenet_resnet50_cuda.json  Hessian_synthetic_mnist_mlp_cuda.json  Hessian_synthetic_shakespeare_nanogpt_cuda.json  KFAC-(hooks)_synthetic_cifar10_resnet18_cuda.json  KFAC-(hooks)_synthetic_imagenet_resnet50_cuda.json  KFAC-(hooks)_synthetic_mnist_mlp_cuda.json  KFAC-(hooks)_synthetic_shakespeare_nanogpt_cuda.json  KFAC-inverse-(hooks)_synthetic_cifar10_resnet18_cuda.json  KFAC-inverse-(hooks)_synthetic_imagenet_resnet50_cuda.json  KFAC-inverse-(hooks)_synthetic_mnist_mlp_cuda.json  KFAC-inverse-(hooks)_synthetic_shakespeare_nanogpt_cuda.json  Monte-Carlo-Fisher_synthetic_cifar10_resnet18_cuda.json  Monte-Carlo-Fisher_synthetic_imagenet_resnet50_cuda.json  Monte-Carlo-Fisher_synthetic_mnist_mlp_cuda.json  Monte-Carlo-Fisher_synthetic_shakespeare_nanogpt_cuda.json  environment.json  gradient_and_loss_synthetic_cifar10_resnet18_cuda.json  gradient_and_loss_synthetic_imagenet_resnet50_cuda.json  gradient_and_loss_synthetic_mnist_mlp_cuda.json  gradient_and_loss_synthetic_shakespeare_nanogpt_cuda.json  peakmem_EKFAC-(hooks)_synthetic_cifar10_resnet18_cuda_matvec.json  peakmem_EKFAC-(hooks)_synthetic_imagenet_resnet50_cuda_matvec.json  peakmem_EKFAC-(hooks)_synthetic_mnist_cnn_cuda_precompute.json  (+354 more)
docs/examples/basic_usage/benchmark/synthetic_cifar10_resnet18/: .pdf-view-restore  EKFAC-(fx)_cuda.json  EKFAC-(hooks)_cuda.json  EKFAC-inverse-(fx)_cuda.json  EKFAC-inverse-(hooks)_cuda.json  Empirical-Fisher_cuda.json  Generalized-Gauss-Newton_cuda.json  Hessian_cuda.json  KFAC-(fx)_cuda.json  KFAC-(hooks)_cuda.json  KFAC-inverse-(fx)_cuda.json  (+3 more)
docs/rtd/: conf.py  index.rst  internals.rst  linops.rst  usage.rst
docs/rtd/assets/: .gitignore  convert.sh  logo.tex
test/: __init__.py  cases.py  conftest.py  kfac_cases.py  test___init__.py  test__base.py  test__checks.py  test__empirical_risk.py  test__torch_base.py  test_activation_hessian.py  test_blockdiagonal.py  test_bug_132.py  test_compile.py  test_diag.py  test_eigh.py  test_ekfac.py  test_fisher.py  test_ggn.py  test_ggn_diagonal.py  test_ggn_utils.py  test_gradient_moments.py  test_hessian.py  test_inverse.py  test_io_collector.py  test_jacobian.py  test_kfac.py  test_kfac_ekfac_cuda_real_nets.py  test_kfac_io.py  test_kfac_utils.py  test_kfoc.py  test_kronecker.py  test_submatrix.py  test_submatrix_on_curvatures.py  test_utils.py  utils.py
test/computers/: __init__.py  test_ekfac.py  test_ekfac_hooks.py  test_ggn_diagonal.py  test_kfac_io.py  test_kfoc.py  test_layer_io.py
test/computers/io_collector/: __init__.py  test_kfac_io.py  test_param_io.py
test/diagonal/: __init__.py  test_epperly2024xtrace.py  test_hutchinson.py
test/examples/: __init__.py  test___init__.py
test/experimental/: __init__.py  test_activation_hessian.py
test/norm/: __init__.py  test_hutchinson.py
test/papyan2020traces/: __init__.py  test_spectrum.py
test/trace/: __init__.py  test_epperly2024xtrace.py  test_hutchinson.py  test_meyer2020hutch.py
vivit/: __init__.py
(+50 files in other folders)
