# This file is used to configure the project.
# Read more about the various options under:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

###############################################################################
#                                 Main library                                #
###############################################################################

[project]
name = "curvlinops-for-pytorch"
authors = [
    { name = "Felix Dangel" },
    { name = "Runa Eschenhagen" },
    { name = "Lukas Tatzel" },
]
urls = { Repository = "https://github.com/f-dangel/curvlinops" }
description = "scipy Linear operators for curvature matrices in PyTorch"
readme = { file = "README.md", content-type = "text/markdown; charset=UTF-8; variant=GFM" }
license = { text = "MIT" }
# Add all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
# Dependencies of the project:
dependencies = [
    "backpack-for-pytorch>=1.6.0,<2.0.0",
    "torch>=2.0",
    "scipy>=1.7.1,<2.0.0",
    "tqdm>=4.61.0,<5.0.0",
    "einops",
    "einconv",
]
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
requires-python = ">=3.8"

###############################################################################
#                           Development dependencies                          #
###############################################################################

[project.optional-dependencies]
# Dependencies needed to run the tests.
test = [
    "matplotlib",
    "coveralls",
    "pytest",
    "pytest-cov",
    "pytest-optional-tests",
]

# Dependencies needed for linting.
lint = [
    "black",
    "flake8",
    "mccabe",
    "pycodestyle",
    "pyflakes",
    "pep8-naming",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-tidy-imports",
    "darglint",
    "pydocstyle",
    "isort",
]

# Dependencies needed to build/view the documentation.
docs = [
    "transformers",
    "datasets",
    "matplotlib",
    "sphinx-gallery",
    "sphinx-rtd-theme",
]

###############################################################################
#                       Development tool configurations                       #
###############################################################################
[tool.setuptools_scm]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pydocstyle]
convention = "google"
match = '.*\.py'
match_dir = '^(?!(test|.git)).*'
